Изменения в связи с ошибками при валидации

--- a/src/html/partials/carouselBenefits.html
+++ b/src/html/partials/carouselBenefits.html
@@ -1,33 +1,43 @@
-<div id="carouselProperties" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselProperties" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselProperties" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselProperties" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Карусель преимуществ</title>
+</head>
+<body>
+    <div id="carouselProperties" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselProperties" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselProperties" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselProperties" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+
+        <div class="carousel-inner radius-image">
+            <div class="carousel-item active image">
+                <img src="../assets/images/carousel-images/carousel-image1.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                    <p class="font-size-48"><b>Приветствуем вас в Глобус</b></p>
+                    <p class="font-size-16">Мы - туристическая компания, которая поможет вам спланировать и забронировать ваше следующее путешествие. Путешествуете ли вы по делам или для удовольствия, мы позаботимся о вас.</p>
+                </div>
+            </div>
+
+            <div class="carousel-item image">
+                <img src="../assets/images/carousel-images/carousel-image2.png" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                    <p class="font-size-48"><b>Откройте мир с нами</b></p>
+                    <p class="font-size-16">Исследуйте новые горизонты! Мы подберем для вас уникальные направления и создадим путешествие, которое идеально подойдёт именно вам.</p>
+                </div>
+            </div>
+
+            <div class="carousel-item image">
+                <img src="../assets/images/carousel-images/carousel-image3.png" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                    <p class="font-size-48"><b>Мы всегда рядом</b></p>
+                    <p class="font-size-16">Наша команда обеспечит поддержку на каждом этапе вашего путешествия, от планирования до возвращения домой. Надёжно, удобно и безопасно.</p>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="carousel-inner radius-image">
-        <div class="carousel-item active image">
-            <img src="../assets/images/carousel-images/carousel-image1.jpg" class="d-block w-100" alt="">
-            <div class="carousel-caption d-md-block">
-                <p class="font-size-48"><b>Приветствуем вас в Глобус</b></p>
-                <p class="font-size-16">Мы - туристическая компания, которая поможет вам спланировать и забронировать ваше следующее путешествие. Путешествуете ли вы по делам или для удовольствия, мы позаботимся о вас.</p>
-            </div>
-        </div>
-
-        <div class="carousel-item image">
-            <img src="../assets/images/carousel-images/carousel-image2.png" class="d-block w-100" alt="">
-            <div class="carousel-caption d-md-block">
-                <p class="font-size-48"><b>Откройте мир с нами</b></p>
-                <p class="font-size-16">Исследуйте новые горизонты! Мы подберем для вас уникальные направления и создадим путешествие, которое идеально подойдёт именно вам.</p>
-            </div>
-        </div>
-
-        <div class="carousel-item image">
-            <img src="../assets/images/carousel-images/carousel-image3.png" class="d-block w-100" alt="">
-            <div class="carousel-caption d-md-block">
-                <p class="font-size-48"><b>Мы всегда рядом</b></p>
-                <p class="font-size-16">Наша команда обеспечит поддержку на каждом этапе вашего путешествия, от планирования до возвращения домой. Надёжно, удобно и безопасно.</p>
-            </div>
-        </div>
-    </div>
-</div>
+</body>
+</html>
