--- a/src/html/partials/termsModal.html
+++ b/src/html/partials/termsModal.html
@@ -1,69 +1,78 @@
-<!-- Модальное окно для Условий оказания услуг -->
-<div class="modal fade text-dark" id="termsModal" tabindex="-1" aria-labelledby="termsModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="termsModalLabel">Условия оказания услуг</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-            </div>
-            <div class="modal-body">
-                <p>Данный текст подготовлен исключительно для учебных целей в рамках курсовой работы. Услуги, описанные на этом сайте, не предоставляются.</p>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Модальное окно для Условий оказания услуг</title>
+</head>
+<body>
+    <div class="modal fade text-dark" id="termsModal" tabindex="-1" aria-labelledby="termsModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="termsModalLabel">Условия оказания услуг</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Данный текст подготовлен исключительно для учебных целей в рамках курсовой работы. Услуги, описанные на этом сайте, не предоставляются.</p>
 
-                <h6>1. Общие положения</h6>
-                <p>
-                    Настоящие Условия оказания услуг (далее – «Условия») регулируют отношения между туристическим агентством «Глобус» (далее – «Исполнитель») и клиентами (далее – «Заказчик») при предоставлении туристических услуг.
-                </p>
+                    <h6>1. Общие положения</h6>
+                    <p>
+                        Настоящие Условия оказания услуг (далее – «Условия») регулируют отношения между туристическим агентством «Глобус» (далее – «Исполнитель») и клиентами (далее – «Заказчик») при предоставлении туристических услуг.
+                    </p>
 
-                <h6>2. Описание услуг</h6>
-                <p>
-                    Исполнитель предоставляет следующие услуги:
-                </p>
-                <ul>
-                    <li>Подбор индивидуальных и групповых туров.</li>
-                    <li>Бронирование отелей и авиабилетов.</li>
-                    <li>Оформление визовой поддержки.</li>
-                    <li>Организация экскурсий и трансферов.</li>
-                    <li>Консультации по туристическим направлениям.</li>
-                </ul>
+                    <h6>2. Описание услуг</h6>
+                    <p>
+                        Исполнитель предоставляет следующие услуги:
+                    </p>
+                    <ul>
+                        <li>Подбор индивидуальных и групповых туров.</li>
+                        <li>Бронирование отелей и авиабилетов.</li>
+                        <li>Оформление визовой поддержки.</li>
+                        <li>Организация экскурсий и трансферов.</li>
+                        <li>Консультации по туристическим направлениям.</li>
+                    </ul>
 
-                <h6>3. Права и обязанности сторон</h6>
-                <p><strong>Исполнитель обязуется:</strong></p>
-                <ul>
-                    <li>Предоставлять услуги качественно и в срок.</li>
-                    <li>Информировать Заказчика о деталях тура и возможных изменениях.</li>
-                    <li>Обеспечивать поддержку Заказчика на всех этапах предоставления услуг.</li>
-                </ul>
+                    <h6>3. Права и обязанности сторон</h6>
+                    <p><strong>Исполнитель обязуется:</strong></p>
+                    <ul>
+                        <li>Предоставлять услуги качественно и в срок.</li>
+                        <li>Информировать Заказчика о деталях тура и возможных изменениях.</li>
+                        <li>Обеспечивать поддержку Заказчика на всех этапах предоставления услуг.</li>
+                    </ul>
 
-                <p><strong>Заказчик обязуется:</strong></p>
-                <ul>
-                    <li>Предоставить точные данные, необходимые для бронирования и оформления услуг.</li>
-                    <li>Своевременно оплачивать услуги согласно установленным тарифам.</li>
-                    <li>Сообщать о любых замечаниях и изменениях, влияющих на предоставление услуг.</li>
-                </ul>
+                    <p><strong>Заказчик обязуется:</strong></p>
+                    <ul>
+                        <li>Предоставить точные данные, необходимые для бронирования и оформления услуг.</li>
+                        <li>Своевременно оплачивать услуги согласно установленным тарифам.</li>
+                        <li>Сообщать о любых замечаниях и изменениях, влияющих на предоставление услуг.</li>
+                    </ul>
 
-                <h6>4. Порядок оплаты</h6>
-                <p>
-                    Оплата услуг производится Заказчиком в соответствии с договоренностью. Счет выставляется на основании выбранных услуг. В случае необходимости Заказчик может запросить предварительную смету.
-                </p>
+                    <h6>4. Порядок оплаты</h6>
+                    <p>
+                        Оплата услуг производится Заказчиком в соответствии с договоренностью. Счет выставляется на основании выбранных услуг. В случае необходимости Заказчик может запросить предварительную смету.
+                    </p>
 
-                <h6>5. Ответственность сторон</h6>
-                <p>
-                    Исполнитель не несет ответственности за действия третьих лиц (авиакомпаний, отелей, транспортных компаний и т.д.) в рамках предоставления туристических услуг.
-                </p>
+                    <h6>5. Ответственность сторон</h6>
+                    <p>
+                        Исполнитель не несет ответственности за действия третьих лиц (авиакомпаний, отелей, транспортных компаний и т.д.) в рамках предоставления туристических услуг.
+                    </p>
 
-                <h6>6. Изменение условий</h6>
-                <p>
-                    Исполнитель оставляет за собой право вносить изменения в настоящие Условия без предварительного уведомления Заказчика. Все изменения вступают в силу с момента их публикации на сайте туристического агентства.
-                </p>
+                    <h6>6. Изменение условий</h6>
+                    <p>
+                        Исполнитель оставляет за собой право вносить изменения в настоящие Условия без предварительного уведомления Заказчика. Все изменения вступают в силу с момента их публикации на сайте туристического агентства.
+                    </p>
 
-                <h6>7. Заключительные положения</h6>
-                <p>
-                    Настоящие Условия регулируются законодательством страны, где расположен Исполнитель. Все споры, возникающие из настоящих Условий, подлежат разрешению в судебном порядке.
-                </p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    <h6>7. Заключительные положения</h6>
+                    <p>
+                        Настоящие Условия регулируются законодательством страны, где расположен Исполнитель. Все споры, возникающие из настоящих Условий, подлежат разрешению в судебном порядке.
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</body>
+</html>
