--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -319,19 +319,19 @@ footer {
 .btn-up {
     bottom: 0;
     right: 0;
-    margin-bottom: 72px; /* Расстояние от низа */
-    margin-right: 16px;  /* Расстояние от правого края */
+    margin-bottom: 72px;
+    margin-right: 16px;
     background-color: white;
-    border-color: black; /* Черная рамка */
+    border-color: black;
 }
 
 .btn-whatsapp {
     bottom: 0;
     right: 0;
-    margin-bottom: 16px; /* Расстояние от низа, чтобы кнопка "Вверх" не перекрывала */
-    margin-right: 16px;  /* Расстояние от правого края */
+    margin-bottom: 16px;
+    margin-right: 16px;
     background-color: green;
-    border-color: black; /* Черная рамка */
+    border-color: black;
 }
 
 
